tests/reference/asr-test_assign9-51278b8.stderr
semantic error: 'i32' object does not support item assignment
 --> tests/errors/test_assign9.py:6:5
  |
6 |     i[0] = 500
  |     ^^^^^^^^^^ 
